--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   json_annotation: ^2.4.0
-
+  dio: ^2.1.13
+  dio_flutter_transformer: ^2.0.10
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
